BugFix: Lock & Visible & Full

--- a/editor/src/panels/outline/outline.less
+++ b/editor/src/panels/outline/outline.less
@@ -10,14 +10,14 @@
     opacity: .6;
   }
   .semi-tree-option-label:has(.is-locked) {
-    opacity: .6;
+    
   }
   .tree-label {
     &.is-hidden {
       opacity: .6;
     }
     &.is-locked {
-      opacity: .6;
+      
     }
   }
 
